k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-notes-service
spec:
  selector:
    app: secure-notes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
